   HBASE-2293  CME in RegionManager#isMetaServer
   HBASE-2261  The javadoc in WhileMatchFilter and it's tests in TestFilter are
               not accurate/wrong
   HBASE-2299  [EC2] mapreduce fixups for PE
   HBASE-2295  Row locks may deadlock with themselves
               (dhruba borthakur via Stack)
   HBASE-2308  Fix the bin/rename_table.rb script, make it work again

  IMPROVEMENTS
   HBASE-2180  Bad read performance from synchronizing hfile.fddatainputstream
   HBASE-2185  Add html version of default hbase-site.xml (Kay Kay via Stack)
   HBASE-2189  HCM trashes meta cache even when not needed
   HBASE-2190  HRS should report to master when HMsg are available
   HBASE-2177  Use datestamp timestamping gc logging.
   HBASE-2222  Improve log "Trying to contact region server Some server for
               region, row 'ip_info_100,,1263329969690', but failed after
               11 attempts".
   HBASE-2220  Add a binary comparator that only compares up to the length
               of the supplied byte array (Bruno Dumon via Stack)
   HBASE-2241  Change balancer sloppyness from 0.1 to 0.3
   HBASE-2262  ZKW.ensureExists should check for existence
   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2277  Update branch to hadoop 0.20.2
   HBASE-2234  Roll Hlog if any datanode in the write pipeline dies
               (Nicolas Spiegelberg via Stack)

  NEW FEATURES
   HBASE-2257  [stargate] multiuser mode
   HBASE-2263  [stargate] multiuser mode: authenticator for zookeeper
   HBASE-2273  [stargate] export metrics via Hadoop metrics, JMX, and zookeeper
   HBASE-2274  [stargate] filter support: JSON descriptors
   HBASE-2298  Backport of "HLog Group Commit" to 0.20 branch
               (Nicolas Spiegelberg via Stack)

Release 0.20.3 - January 25th, 2010
  INCOMPATIBLE CHANGES

  BUG FIXES